--- a/Chapter 01.Rmd
+++ b/Chapter 01.Rmd
@@ -1,7 +1,11 @@
 ---
 title: "Applied forecasting for business and economics"
 author: "Ch1. Getting started"
-output: html_document
+output:
+  html_document:
+    toc: true
+    toc_float: false
+    number_sections: true
 ---
 
 # Exercises
