--- a/Chapter 05.Rmd
+++ b/Chapter 05.Rmd
@@ -1,7 +1,11 @@
 ---
 title: "Applied forecasting for business and economics"
 author: "Ch5. Regression models"
-output: html_document
+output:
+  html_document:
+    toc: true
+    toc_float: false
+    number_sections: true
 ---
 
 ```{r setup, include=FALSE}
@@ -9,6 +13,8 @@ knitr::opts_chunk$set(echo = FALSE, cache=TRUE, warning=FALSE, message=FALSE,
                       dev.args=list(bg=grey(0.9), pointsize=11))
 library(fpp2)
 library(knitr)
+library(splines)
+
 ```
 
 # The linear model with time series
@@ -38,10 +44,10 @@ quarters <- rownames(.preformat.ts(uschange))
 
 ```{r ConsInc, echo=TRUE, cache=TRUE, fig.height=3.5}
 autoplot(uschange[,c("Consumption","Income")]) +
-  ylab("% change") + xlab("Year")
+  ylab("% change") + xlab("Year") +
+  theme(legend.position="bottom")  +
+  ggtitle("US growth rates of personal consumption and personal income")
 ```
-
-## Example: US consumption expenditure
 
 ```{r ConsInc2, echo=FALSE, cache=TRUE}
 fit.cons <- tslm(Consumption ~ Income, data=uschange)
@@ -54,13 +60,11 @@ uschange %>%
   geom_smooth(method="lm", se=FALSE)
 ```
 
-## Example: US consumption expenditure
-
 ```{r, echo=TRUE, cache=TRUE}
 tslm(Consumption ~ Income, data=uschange) %>% summary
 ```
 
-## Example: US consumption expenditure
+Additional predictors that may be useful for forecasting US consumption expenditure.
 
 ```{r MultiPredictors, echo=FALSE, cache=TRUE}
 autoplot(uschange[,3:5], facets = TRUE, colour=TRUE) +
@@ -68,7 +72,7 @@ autoplot(uschange[,3:5], facets = TRUE, colour=TRUE) +
   guides(colour="none")
 ```
 
-## Example: US consumption expenditure
+Scatterplot matrix of five variables. The first column shows the relationships between the forecast variable (consumption) and each of the predictors. The scatterplots show positive relationships with income and industrial production, and negative relationships with savings and unemployment. The strength of these relationships are shown by the correlation coefficients across the first row. The remaining scatterplots and correlation coefficients show the relationships between the predictors.
 
 ```{r ScatterMatrix, echo=FALSE, cache=TRUE}
 uschange %>%
@@ -76,7 +80,7 @@ uschange %>%
   GGally::ggpairs()
 ```
 
-## Example: US consumption expenditure
+The following output provides information about the fitted model.
 
 ```{r usestim, echo=TRUE, fig.height=3.5}
 fit.consMR <- tslm(
@@ -84,18 +88,16 @@ fit.consMR <- tslm(
   data=uschange)
 summary(fit.consMR)
 ```
-
-## Example: US consumption expenditure
+The following plots show the actual values compared to the fitted values for the percentage change in the US consumption expenditure series.
 
 ```{r usfitted1, echo=FALSE, cache=TRUE}
 autoplot(uschange[,'Consumption'], series="Data") +
   autolayer(fitted(fit.consMR), series="Fitted") +
   xlab("Year") + ylab("") +
   ggtitle("Percentage change in US consumption expenditure") +
-  guides(colour=guide_legend(title=" "))
+  guides(colour=guide_legend(title=" ")) +
+  theme(legend.position="bottom")
 ```
-
-## Example: US consumption expenditure
 
 ```{r usfitted2, echo=FALSE, cache=TRUE, message=FALSE, warning=FALSE}
 cbind(Data=uschange[,"Consumption"], Fitted=fitted(fit.consMR)) %>%
@@ -108,13 +110,44 @@ cbind(Data=uschange[,"Consumption"], Fitted=fitted(fit.consMR)) %>%
   geom_abline(intercept=0, slope=1)
 ```
 
-## Example: US consumption expenditure
+A time plot, the ACF and the histogram of the residuals from the multiple regression model fitted to the US quarterly consumption data, as well as the Breusch-Godfrey test for jointly testing up to 8th order autocorrelation.
 
 ```{r}
 checkresiduals(fit.consMR, test=FALSE)
 ```
 
+The time plot shows some changing variation over time, but is otherwise relatively unremarkable. This heteroscedasticity will potentially make the prediction interval coverage inaccurate.
+
+The histogram shows that the residuals seem to be slightly skewed, which may also affect the coverage probability of the prediction intervals.
+
+The autocorrelation plot shows a significant spike at lag 7, but it is not quite enough for the Breusch-Godfrey to be significant at the 5% level. The autocorrelation is not particularly large, and at lag 7 it is unlikely to have any noticeable impact on the forecasts or the prediction intervals.
+
 # Residual diagnostics
+
+```{r}
+df <- as.data.frame(uschange)
+df[,"Residuals"]  <- as.numeric(residuals(fit.consMR))
+p1 <- ggplot(df, aes(x=Income, y=Residuals)) +
+  geom_point()
+p2 <- ggplot(df, aes(x=Production, y=Residuals)) +
+  geom_point()
+p3 <- ggplot(df, aes(x=Savings, y=Residuals)) +
+  geom_point()
+p4 <- ggplot(df, aes(x=Unemployment, y=Residuals)) +
+  geom_point()
+gridExtra::grid.arrange(p1, p2, p3, p4, nrow=2)
+```
+
+Residuals from the multiple regression model for forecasting US consumption plotted against each predictor seem to be randomly scattered.
+
+```{r}
+cbind(Fitted = fitted(fit.consMR),
+      Residuals=residuals(fit.consMR)) %>%
+  as.data.frame() %>%
+  ggplot(aes(x=Fitted, y=Residuals)) + geom_point()
+```
+
+Residuals plotted against the fitted values. The random scatter suggests the errors are homoscedastic.
 
 ##  Multiple regression and forecasting
 For forecasting purposes, we require the following assumptions:
@@ -166,7 +199,7 @@ when there is no serial correlation up to lag $p$, and $T=$ length of series.
 checkresiduals(fit.consMR, plot=FALSE)
 ```
 
-### If the model fails the Breusch-Godfrey test \dots
+If the model fails the Breusch-Godfrey test \dots
 
 * The forecasts are not wrong, but have higher variance than they need to.
 * There is information in the residuals that we should exploit.
@@ -188,14 +221,13 @@ If a categorical variable takes only two values (e.g., `Yes`
 or `No`), then an equivalent numerical variable can be constructed
 taking value 1 if yes and 0 if no. This is called a **dummy** variable}.
 
-## Dummy variables
-
 If there are more than two categories, then the variable can
 be coded using several dummy variables (one fewer than the total
 number of categories).
 
 
 ## Beware of the dummy variable trap!
+
 * Using one dummy for each category gives too many dummy variables!
 
 * The regression will then be singular and inestimable.
@@ -231,30 +263,25 @@ autoplot(beer) + xlab("Year") + ylab("megalitres") +
   ggtitle("Australian quarterly beer production")
 ```
 
-## Beer production revisited
-
 Regression model
 
 $y_t = \beta_0 + \beta_1 t + \beta_2d_{2,t} + \beta_3 d_{3,t} + \beta_4 d_{4,t} + \varepsilon_t$
 
 * $d_{i,t} = 1$ if $t$ is quarter $i$ and 0 otherwise.
 
-## Beer production revisited
-
 ```{r, echo=TRUE}
 fit.beer <- tslm(beer ~ trend + season)
 summary(fit.beer)
 ```
-## Beer production revisited
+There is an average downward trend of -0.34 megalitres per quarter. On average, the second quarter has production of 34.7 megalitres lower than the first quarter, the third quarter has production of 17.8 megalitres lower than the first quarter, and the fourth quarter has production of 72.8 megalitres higher than the first quarter.
 
 ```{r}
 autoplot(beer, series="Data") +
   autolayer(fitted(fit.beer), series="Fitted") +
   xlab("Year") + ylab("Megalitres") +
-  ggtitle("Quarterly Beer Production")
+  ggtitle("Quarterly Beer Production") +
+  theme(legend.position="bottom")
 ```
-
-## Beer production revisited
 
 ```{r, echo=FALSE}
 cbind(Data=beer, Fitted=fitted(fit.beer)) %>%
@@ -264,24 +291,23 @@ cbind(Data=beer, Fitted=fitted(fit.beer)) %>%
   ylab("Fitted") + xlab("Actual values") +
   ggtitle("Quarterly beer production") +
   scale_colour_brewer(palette="Dark2", name="Quarter") +
-  geom_abline(intercept=0, slope=1)
+  geom_abline(intercept=0, slope=1) +
+  theme(legend.position="bottom")
 ```
-
-## Beer production revisited
 
 ```{r}
 checkresiduals(fit.beer, test=FALSE)
 ```
 
-## Beer production revisited
-
 ```{r}
-fit.beer %>% forecast %>% autoplot
+fit.beer %>% forecast %>% autoplot +
+  theme(legend.position="bottom")
 ```
 
 ## Fourier series
 
 Periodic seasonality can be handled using pairs of Fourier terms:
+
 $$
 s_{k}(t) = \sin\left(\frac{2\pi k t}{m}\right)\qquad c_{k}(t) = \cos\left(\frac{2\pi k t}{m}\right)
 $$
@@ -380,8 +406,6 @@ autoplot(marathon) +
 fit.lin <- tslm(marathon ~ trend)
 ```
 
-## Example: Boston marathon winning times
-
 ```{r marathonLinear, echo=FALSE, message=TRUE, warning=FALSE, cache=TRUE}
 autoplot(marathon) +
   autolayer(fitted(fit.lin), series = "Linear trend") +
@@ -390,29 +414,28 @@ autoplot(marathon) +
   theme(legend.position = "none")
 ```
 
-## Example: Boston marathon winning times
-
 ```{r, echo=TRUE, fig.height=3.5}
 autoplot(residuals(fit.lin)) +
   xlab("Year") + ylab("Residuals from a linear trend")
 ```
 
-## Example: Boston marathon winning times
+- Linear trend
 
 ```{r, echo=TRUE, message=TRUE, warning=FALSE, cache=TRUE}
-# Linear trend
 fit.lin <- tslm(marathon ~ trend)
 fcasts.lin <- forecast(fit.lin, h=10)
+```
 
-# Exponential trend
+- Exponential trend
+
+```{r, echo=TRUE, message=TRUE, warning=FALSE, cache=TRUE}
 fit.exp <- tslm(marathon ~ trend, lambda = 0)
 fcasts.exp <- forecast(fit.exp, h=10)
 ```
 
-##
+- Piecewise linear trend
 
 ```{r}
-# Piecewise linear trend
 t.break1 <- 1940
 t.break2 <- 1980
 t <- time(marathon)
@@ -427,8 +450,6 @@ newdata <- cbind(t=t.new, t1=t1.new, t2=t2.new) %>%
 fcasts.pw <- forecast(fit.pw, newdata = newdata)
 ```
 
-## Example: Boston marathon winning times
-
 ```{r, echo=FALSE, message=TRUE, warning=FALSE, cache=TRUE}
 autoplot(marathon) +
   autolayer(fitted(fit.lin), series = "Linear") +
@@ -439,10 +460,9 @@ autoplot(marathon) +
   autolayer(fcasts.exp$mean, series="Exponential") +
   xlab("Year") +  ylab("Winning times in minutes") +
   ggtitle("Boston Marathon") +
-  guides(colour=guide_legend(title=" "))
+  guides(colour=guide_legend(title=" ")) +
+  theme(legend.position="bottom")
 ```
-
-## Example: Boston marathon winning times
 
 ```{r residPiecewise, message=FALSE, warning=FALSE, cache=TRUE}
 fit.pw$method <- "Piecewise linear regression model"
@@ -455,19 +475,13 @@ checkresiduals(fit.pw, test=FALSE)
 include_graphics("figs/draftspline.jpg")
 ```
 
-## Interpolating splines
-
 ```{r,out.width = "80%"}
 include_graphics("figs/spline.jpg")
 ```
 
-## Interpolating splines
-
 ```{r,out.width = "80%"}
 include_graphics("figs/spline2.jpg")
 ```
-
-## Interpolating splines
 
 A spline is a continuous function $f(x)$ interpolating all
 points ($\kappa_j,y_j$) for $j=1,\dots,K$ and consisting of polynomials between each consecutive pair of `knots' $\kappa_j$ and $\kappa_{j+1}$.
@@ -496,7 +510,6 @@ points ($\kappa_j,y_j$) for $j=1,\dots,K$ and consisting of polynomials between 
 
 ```{r, echo=TRUE, message=TRUE, warning=FALSE, cache=TRUE}
 # Spline trend
-library(splines)
 t <- time(marathon)
 fit.splines <- lm(marathon ~ ns(t, df=6))
 summary(fit.splines)
@@ -504,10 +517,7 @@ fits <- ts(fitted(fit.splines))
 tsp(fits) <- tsp(marathon)
 ```
 
-## Example: Boston marathon winning times
-
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, cache=TRUE}
-library(splines)
 fc <- predict(fit.splines, newdata=data.frame(t=time(fcasts.pw$mean)),
               interval='prediction', level=0.95)
 fcasts.spline <- fcasts.pw
@@ -525,7 +535,8 @@ autoplot(marathon) +
   autolayer(fcasts.spline, series="Cubic spline") +
   xlab("Year") +  ylab("Winning times in minutes") +
   ggtitle("Boston Marathon") +
-  guides(colour=guide_legend(title=" "))
+  guides(colour=guide_legend(title=" ")) +
+  theme(legend.position="bottom")
 ```
 
 ## splinef
@@ -574,14 +585,11 @@ $$R^2 = \frac{\sum(\hat{y}_t - \bar{y})^2}{\sum(y_t-\bar{y})^2}
 $$
 * It is the proportion of variance accounted for (explained) by the predictors.
 
-## Comparing regression models
-
 However $\dots$
 
 * $R^2$  does not allow for `degrees of freedom`.
 
 * Adding *any* variable tends to increase the value of $R^2$, even if that variable is irrelevant.
-
 
 To overcome   this problem, we can use adjusted $R^2$:
 
@@ -602,10 +610,6 @@ $\hat{\sigma}^2 = \frac{1}{T-k-1}\sum_{t=1}^T \varepsilon_t^2$
 * Select one observation for test set, and use \emph{remaining} observations in training set. Compute error on test observation.
 * Repeat using each possible observation as the test set.
 * Compute accuracy measure over all errors.
-
-## Cross-validation
-
-**Traditional evaluation**
 
 ```{r traintest0, fig.height=.6, echo=FALSE, cache=TRUE}
 train = 1:16
@@ -643,8 +647,6 @@ kcvplot <- function(k,n)
 kcvplot(20,20)
 ```
 
-## Cross-validation
-
 Leave-one-out cross-validation for regression can be carried out using the following steps.
 
 * Remove observation $t$ from the data set, and fit the model using the remaining data. Then compute the error ($e_t^*=y_t-\hat{y}_t$) for the omitted observation.
@@ -652,8 +654,6 @@ Leave-one-out cross-validation for regression can be carried out using the follo
 * Compute the MSE from $\{e_1^*,\dots,e_T^*\}$. We shall call this the CV.
 
 The best model is the one with minimum CV.
-
-## Cross-validation
 
 **Five-fold cross-validation**
 
@@ -670,8 +670,6 @@ kcvplot(5,20)
 ```{r, fig.height=2.}
 kcvplot(10,20)
 ```
-
-## Cross-validation
 
 Ten-fold cross-validation
 
@@ -725,8 +723,6 @@ where $L$ is the likelihood and $k$ is the number of predictors in the model.**
 
 * For example, 44 predictors leads to 18 trillion possible models!
 
-## Choosing regression variables
-
 **Backwards stepwise regression**
 
 * Start with a model containing all variables.
@@ -739,8 +735,6 @@ has lower CV or AICc.
 * Stepwise regression is not guaranteed to lead to the best possible
 model.
 * Inference on coefficients of  final model will be wrong.
-
-## Cross-validation
 
 ```{r, echo=TRUE}
 tslm(Consumption ~ Income + Production + Unemployment + Savings,
@@ -764,14 +758,14 @@ tslm(Consumption ~ Production + Unemployment + Savings,
 * *Ex post forecasts* are made using later information on the predictors.
 - useful for studying behaviour of forecasting models.
 
-* trend, seasonal and calendar variables are all known in advance, so these don't need to be forecast.
+* trend, seasonal and calendar variables are all known in advance, so these do not need to be forecast.
 
 ## Scenario based forecasting
 
 * Assumes possible scenarios for the predictor variables
 * Prediction intervals for scenario based forecasts do not include the uncertainty associated with the future values of the predictor variables.
 
-## Building a predictive regression model {-}
+## Building a predictive regression model
 
 * If getting forecasts of predictors is difficult, you can use lagged predictors instead.
 $$y_{t}=\beta_0+\beta_1x_{1,t-h}+\dots+\beta_kx_{k,t-h}+\varepsilon_{t}$$
@@ -786,7 +780,8 @@ fit.beer <- tslm(beer2 ~ trend + season)
 fcast <- forecast(fit.beer)
 autoplot(fcast) +
   ggtitle("Forecasts of beer production using regression") +
-  xlab("Year") + ylab("megalitres")
+  xlab("Year") + ylab("megalitres") +
+  theme(legend.position="bottom")
 ```
 
 ## US Consumption
@@ -808,19 +803,18 @@ newdata <- data.frame(
 fcast.down <- forecast(fit.consBest, newdata = newdata)
 ```
 
-## US Consumption
-
 ```{r usconsumptionf2, echo=TRUE, fig.height=3.5}
 autoplot(uschange[, 1]) +
   ylab("% change in US consumption") +
   autolayer(fcast.up, PI = TRUE, series = "increase") +
   autolayer(fcast.down, PI = TRUE, series = "decrease") +
-  guides(colour = guide_legend(title = "Scenario"))
+  guides(colour = guide_legend(title = "Scenario")) +
+  theme(legend.position="bottom")
 ```
 
-## Exercises 
+# Exercises 
 
-## Exercise 
+## Exercise 1
 
 Daily electricity demand for Victoria, Australia, during 2014 is contained in elecdaily. The data for the first 20 days can be obtained as follows.
 
@@ -851,7 +845,7 @@ Produce a residual plot. Is the model adequate? Are there any outliers or influe
 checkresiduals(tslm_dem_temp$residuals)
 ```
 
-This model is adequate because residuals aren't correlated (white noise) with each other and it roughly normally distributed.
+This model is adequate because residuals are not correlated (white noise) with each other and it roughly normally distributed.
 
 Use the model to forecast the electricity demand that you would expect for the next day if the maximum temperature was 15∘and compare it with the forecast if the with maximum temperature was 35∘. Do you believe these forecasts?
 
@@ -891,9 +885,9 @@ elecdaily %>%
   geom_smooth(method="lm", se=FALSE)
 ```
 
-The first model was made by few data points. The data of the first 20 days could be explained, but it wasn't right model for `elecdaily`.
+The first model was made by few data points. The data of the first 20 days could be explained, but it was not right model for `elecdaily`.
 
-## Exercise 
+## Exercise 2
 
 Data set `mens400` contains the winning times (in seconds) for the men’s 400 meters final in each Olympic Games from 1896 to 2016.
 
@@ -902,8 +896,9 @@ Plot the winning time against the year. Describe the main features of the plot.
 ```{r}
 autoplot(mens400)
 ```
-Feature 1: Winning times in Olympic men's 400m track final has a decreasing trend.
-Feature 2: There are missing values.
+
+- Feature 1: Winning times in Olympic men's 400m track final has a decreasing trend.
+- Feature 2: There are missing values.
 
 Fit a regression line to the data. Obviously the winning times have been decreasing, but at what average rate per year?
 
@@ -966,7 +961,7 @@ autoplot(mens400) +
   autolayer(fc_mens400, PI = TRUE)
 ```
 
-## Exercise 
+## Exercise 3
 
 Type `easter(ausbeer)` and interpret what you see.
 
@@ -976,9 +971,9 @@ easter(ausbeer)
 
 Data: Quarterly Australian beer production data. There are 218 data points.
 Start is 1st quarter of 1956 and the last is the 2nd quarter of 2010.
-`easter` function returns a vector of 0's or 1's or fractional parts in the observed time period. If full Easter holidays are in a time period, it returns 1, and returns 0 if there isn't any. If the holidays are extended from a period to the other, easter function returns fractional portions to each of them.
+`easter` function returns a vector of 0's or 1's or fractional parts in the observed time period. If full Easter holidays are in a time period, it returns 1, and returns 0 if there is not any. If the holidays are extended from a period to the other, easter function returns fractional portions to each of them.
 
-## Exercise 
+## Exercise 4
 
 The data set fancy concerns the monthly sales figures of a shop which opened in January 1987 and sells gifts, souvenirs, and novelties. The shop is situated on the wharf at a beach resort town in Queensland, Australia. The sales volume varies with the seasonal population of tourists. There is a large influx of visitors to the town at Christmas and for the local surfing festival, held every March since 1988. Over time, the shop has expanded its premises, range of products, and staff.
 
@@ -1041,8 +1036,9 @@ fancy_log_df$fitted <- predict(tslm_fancy_log, newdata=data.frame(fancy_log_df$d
 autoplot(fancy_log, series="Data") +
   autolayer(fitted(tslm_fancy_log), series="Fitted") +
   ggtitle("Monthly Sales for a souvenir shop") +
-  xlab("Year") + ylab("Australia Dollars (log)") 
-guides(colour=guide_legend(title=" "))
+  xlab("Year") + ylab("Australia Dollars (log)") + 
+  guides(colour=guide_legend(title=" "))  +
+  theme(legend.position="bottom") 
 
 checkresiduals(tslm_fancy_log)
 ```
@@ -1062,7 +1058,7 @@ ggsubseriesplot(tslm_fancy_log$residuals)
 
 Residuals are highest in December. The residuals have pattern so it means that there is correlation between residuals and time.
 
-The distribution of the residuals is unsymetrical for some months. For some months, the mean of the residuals wasn't 0 (residuals' mean should be 0 for all months because getting the minimum SSE means getting mean). Residuals with such properties can't have normal distribution, which will make it difficult to get prediction interval.
+The distribution of the residuals is unsymetrical for some months. For some months, the mean of the residuals was not 0 (residuals' mean should be 0 for all months because getting the minimum SSE means getting mean). Residuals with such properties ca not have normal distribution, which will make it difficult to get prediction interval.
 
 What do the values of the coefficients tell you about each variable?
 
@@ -1070,9 +1066,9 @@ What do the values of the coefficients tell you about each variable?
 tslm_fancy_log$coefficients
 ```
 
-# The model has positive trend. It means that as time goes on, the sales amount generally increases. 
-# And all seasonal variables are positive. It means that the sales amount was minimum on January and the sales of the other months were greater than January for most of years. 
-# Finally, surfing_festival variable's coefficient is 0.501 and it isn't small compared to the others. It means that there were increased sales in Marchs when surfing festival happened.
+<!-- # The model has positive trend. It means that as time goes on, the sales amount generally increases.  -->
+<!-- # And all seasonal variables are positive. It means that the sales amount was minimum on January and the sales of the other months were greater than January for most of years.  -->
+<!-- # Finally, surfing_festival variable's coefficient is 0.501 and it is not small compared to the others. It means that there were increased sales in Marchs when surfing festival happened. -->
 
 What does the Breusch-Godfrey test tell you about your model?
 
@@ -1100,7 +1096,8 @@ fc_tslm_log_fancy <- forecast(
 )
 
 # plot the forecast
-autoplot(fc_tslm_log_fancy)
+autoplot(fc_tslm_log_fancy) +
+  theme(legend.position="bottom")
 ```
 
 Transform your predictions and intervals to obtain predictions and intervals for the raw data.
@@ -1131,12 +1128,13 @@ fc_tslm_log_fancy <- forecast(
 )
 
 # plot the forecast
-autoplot(fc_tslm_log_fancy)
+autoplot(fc_tslm_log_fancy) +
+  theme(legend.position="bottom")
 
 checkresiduals(fc_tslm_log_fancy)
 ```
 
-## Exercise
+## Exercise 5
 
 The gasoline series consists of weekly data for supplies of US finished motor gasoline product, from 2 February 1991 to 20 January 2017. The units are in “million barrels per day”. Consider only the data to the end of 2004.
 
@@ -1173,7 +1171,8 @@ for(num in c(1, 2, 3, 5, 10, 20)){
                 series = as.character(num)) +
       ggtitle(var_name) +
       ylab("gasoline") +
-      guides(colour = guide_legend(title = "Number of Fourier Transform pairs"))
+      guides(colour = guide_legend(title = "Number of Fourier Transform pairs")) +
+  theme(legend.position="bottom")
   )
 }
 ```
@@ -1189,7 +1188,8 @@ autoplot(gasoline_until_2004) +
   autolayer(tslm_ft20_gasoline_until_2004$fitted.values, series = "10") +
   autolayer(tslm_ft20_gasoline_until_2004$fitted.values, series = "20") +
   guides(colour = guide_legend(title = "Fourier Transform pairs")) +
-  scale_color_discrete(breaks = c(1, 2, 3, 5, 10, 20))
+  scale_color_discrete(breaks = c(1, 2, 3, 5, 10, 20)) +
+  theme(legend.position="bottom")
 ```
 
 As more number of Fourier pairs used, the fitted line looks more like the original data. The fitted lines do not follow the trend well.
@@ -1235,8 +1235,8 @@ for(num in 1:26){
     )
   )[["CV"]]
   
-  # If the minimum AICc and CV values are found, the loop don't need to run anymore. Therefore print the result number of pairs and break the loop.
-  # If num = 1, don't run below codes and move to num = 2. With just the result of num = 1, I cannot know whether the AICc and CV values are minimum.
+  # If the minimum AICc and CV values are found, the loop do not need to run anymore. Therefore print the result number of pairs and break the loop.
+  # If num = 1, do not run below codes and move to num = 2. With just the result of num = 1, I cannot know whether the AICc and CV values are minimum.
   if(num != 1){
     if(AICc_K >= min_AICc & CV_K >= min_CV){
       writeLines(
@@ -1308,12 +1308,13 @@ autoplot(fc_gasoline_2005) +
     end = 2006
   )
   ) +
-  scale_x_continuous(limits = c(2004, 2006))
+  scale_x_continuous(limits = c(2004, 2006)) +
+  theme(legend.position="bottom") 
 ```
 
-The majority of actual data fits within the 80% prediction interval. The model couldn't predict the sudden fall in the fall as the drop was a lot bigger than expected (outside teh 95% interval).
+The majority of actual data fits within the 80% prediction interval. The model could not predict the sudden fall in the fall as the drop was a lot bigger than expected (outside teh 95% interval).
 
-## Exercise 
+## Exercise 6
 
 Data set `huron` gives the water level of Lake Huron in feet from 1875 to 1972.
 
@@ -1380,9 +1381,8 @@ autoplot(huron) +
   autolayer(fc_tslm_spline_huron$mean, series="Cubic Spline") +
   xlab("Year") +  ylab("Water level") +
   ggtitle("Lake Huron water level change") +
-  guides(colour=guide_legend(title=" "))
-
-
+  guides(colour=guide_legend(title=" ")) +
+  theme(legend.position="bottom") 
 ```
 
 Cubic spline model did catch the trend well. Linear model, exponential model and log transformed linear model did not catch the trend well at 1915.
@@ -1398,7 +1398,8 @@ autoplot(huron) +
           subtitle = "Linear Regression model") +
   guides(colour=guide_legend(title=" ")) +
   theme(plot.title = element_text(hjust = 0.5),
-        plot.subtitle = element_text(hjust = 0.5))
+        plot.subtitle = element_text(hjust = 0.5)) +
+  theme(legend.position="bottom") 
 
 autoplot(huron) +
   autolayer(fitted(tslm_pw_huron), series = "Piecewise") +
@@ -1408,7 +1409,8 @@ autoplot(huron) +
           subtitle = "Piecewise linear model") +
   guides(colour=guide_legend(title=" ")) +
   theme(plot.title = element_text(hjust = 0.5),
-        plot.subtitle = element_text(hjust = 0.5))
+        plot.subtitle = element_text(hjust = 0.5)) +
+  theme(legend.position="bottom") 
 
 checkresiduals(tslm_huron)
 checkresiduals(tslm_pw_huron)
