--- a/Chapter_03.Rmd
+++ b/Chapter_03.Rmd
@@ -18,48 +18,56 @@ options(width=45)
 
 # Some simple forecasting methods
 
-```{r ausbeer, echo=FALSE}
+## Some simple forecasting methods
+
+```{r ausbeer, fig.height=4.6, echo=FALSE}
 beer2 <- window(ausbeer, start=1992)
 autoplot(beer2) +
   xlab("Year") + ylab("megalitres") +
   ggtitle("Australian quarterly beer production")
 ```
 
-```{r pigs, echo=FALSE}
+How would you forecast these data?
+
+```{r pigs, fig.height=4.6, echo=FALSE}
 autoplot(window(pigs/1e3, start=1990)) +
   xlab("Year") + ylab("thousands") +
   ggtitle("Number of pigs slaughtered in Victoria")
 ```
 
-```{r dj, echo=FALSE}
+How would you forecast these data?
+
+```{r dj, fig.height=4.6, echo=FALSE}
 autoplot(dj) + xlab("Day") +
   ggtitle("Dow-Jones index") + ylab("")
 ```
 
-## Average method
+How would you forecast these data?
+
+### Average method
 
 * Forecast of all future values is equal to mean of historical data $\{y_1,\dots,y_T\}$.
 * Forecasts: $\hat{y}_{T+h|T} = \bar{y} = (y_1+\dots+y_T)/T$
 
-## Naïve method
+### Naïve method
 
 * Forecasts equal to last observed value.
 * Forecasts: $\hat{y}_{T+h|T} =y_T$.
 * Consequence of efficient market hypothesis.
 
-## Seasonal naïve method
+### Seasonal naïve method
 
 * Forecasts equal to last value from same season.
 * Forecasts: $\hat{y}_{T+h|T} =y_{T+h-m(k+1)}$, where $m=$ seasonal period and $k$ is the integer part of $\frac{h-1}{m}$.
 
-## Drift method
+### Drift method
 
 * Forecasts equal to last value plus average change.
 * Forecasts: $\hat{y}_{T+h|T} = y_{T} + \frac{h}{T-1} \sum_{t=2}^T X_i (y_t-y_{t-1}) =\\ = y_T + h\frac{y_T - y_1}{T-1}$.
 
 * Equivalent to extrapolating a line drawn between first and last observations.
 
-```{r beerf, warning=FALSE, message=FALSE, echo=FALSE}
+```{r beerf, warning=FALSE, message=FALSE, echo=FALSE, fig.height=4.6}
 beer2 <- window(ausbeer,start=1992,end=c(2007,4))
 # Plot some forecasts
 autoplot(beer2) +
@@ -68,11 +76,10 @@ autoplot(beer2) +
   autolayer(snaive(beer2, h=11), PI=FALSE, series="Seasonal naïve") +
   ggtitle("Forecasts for quarterly beer production") +
   xlab("Year") + ylab("Megalitres") +
-  guides(colour=guide_legend(title="Forecast")) +
-  theme(legend.position="bottom")  
+  guides(colour=guide_legend(title="Forecast"))
 ```
 
-```{r djf,  message=FALSE, warning=FALSE, echo=FALSE}
+```{r djf,  message=FALSE, warning=FALSE, echo=FALSE, fig.height=4.6}
 # Set training data to first 250 days
 dj2 <- window(dj,end=250)
 # Plot some forecasts
@@ -82,8 +89,7 @@ autoplot(dj2) +
   autolayer(rwf(dj2, drift=TRUE, h=42), PI=FALSE, series="Drift") +
   ggtitle("Dow Jones Index (daily ending 15 Jul 94)") +
   xlab("Day") + ylab("") +
-  guides(colour=guide_legend(title="Forecast")) +
-  theme(legend.position="bottom")  
+  guides(colour=guide_legend(title="Forecast"))
 ```
 
 * Mean: `meanf(y, h=20)`
@@ -91,14 +97,14 @@ autoplot(dj2) +
 * Seasonal naïve: `snaive(y, h=20)`
 * Drift: `rwf(y, drift=TRUE, h=20)`
 
-## Your turn
+### Your turn
 
 * Use these four functions to produce forecasts for `goog` and `auscafe`.
 * Plot the results using `autoplot()`.
 
-### goog
+#### goog
 
-```{r googf, warning=FALSE, message=FALSE, echo=FALSE}
+```{r googf, warning=FALSE, message=FALSE, echo=FALSE, fig.height=4.6}
 goog <- ts(goog, frequency=1, start=c(2013, 12, 25))
 # Plot some forecasts
 autoplot(goog) +
@@ -107,13 +113,12 @@ autoplot(goog) +
   autolayer(snaive(goog, h=20), PI=FALSE, series="Seasonal naïve") +
   ggtitle("Google stock (daily ending 13 Feb 2017)") +
   xlab("Day") + ylab("Closing Price (US$)") +
-  guides(colour=guide_legend(title="Forecast")) +
-  theme(legend.position="bottom")  
+  guides(colour=guide_legend(title="Forecast"))
 ```
 
-### auscafe
+#### auscafe
 
-```{r auscafef, warning=FALSE, message=FALSE, echo=FALSE}
+```{r auscafef, warning=FALSE, message=FALSE, echo=FALSE, fig.height=4.6}
 # Plot some forecasts
 autoplot(auscafe) +
   autolayer(meanf(auscafe, h=20), PI=FALSE, series="Mean") +
@@ -121,11 +126,10 @@ autoplot(auscafe) +
   autolayer(snaive(auscafe, h=20), PI=FALSE, series="Seasonal naïve") +
   ggtitle("Monthly expenditure on eating out in Australia") +
   xlab("Year") + ylab("Australia ($billion)") +
-  guides(colour=guide_legend(title="Forecast")) +
-  theme(legend.position="bottom")  
+  guides(colour=guide_legend(title="Forecast"))
 ```
 
-# Transformations and adjustments
+# Box-Cox transformations
 
 ## Variance stabilization
 
@@ -147,31 +151,31 @@ Logarithms, in particular, are useful because they are more interpretable:
 changes in a log value are relative (percent) changes on the original
 scale.
 
-```{r elec, echo=FALSE}
+```{r elec, echo=FALSE, fig.height=4.6}
 autoplot(elec) +
   xlab("Year") + ylab("") +
   ggtitle("Australian electricity production")
 ```
 
-```{r elec1, echo=FALSE}
+```{r elec1, echo=FALSE, fig.height=4.6}
 autoplot(elec^0.5) +
   xlab("Year") + ylab("") +
   ggtitle("Square root electricity production")
 ```
 
-```{r elec2, echo=FALSE}
+```{r elec2, echo=FALSE, fig.height=4.6}
 autoplot(elec^0.33333) +
   xlab("Year") + ylab("") +
   ggtitle("Cube root electricity production")
 ```
 
-```{r elec3, echo=FALSE}
+```{r elec3, echo=FALSE, fig.height=4.6}
 autoplot(log(elec)) +
   xlab("Year") + ylab("") +
   ggtitle("Log electricity production")
 ```
 
-```{r elec4, echo=FALSE}
+```{r elec4, echo=FALSE, fig.height=4.6}
 autoplot(-1/elec) +
   xlab("Year") + ylab("") +
   ggtitle("Inverse electricity production")
@@ -229,7 +233,9 @@ autoplot(BoxCox(elec,lambda=-1))
 
 ## Back-transformation
 
-We must reverse the transformation (or back-transform) to obtain forecasts on the original scale.  The reverse Box-Cox transformations are given by
+We must reverse the transformation (or back-transform) to obtain
+forecasts on the original scale.  The reverse Box-Cox transformations are given
+by
 $$ y_t = \left\{\begin{array}{ll}
 \exp(w_t),      & \quad \lambda = 0; \\
 (\lambda W_t+1)^{1/\lambda} ,   & \quad \lambda \ne 0.
@@ -237,19 +243,16 @@ $$ y_t = \left\{\begin{array}{ll}
 
 ```{r elec8,echo=TRUE,fig.height=3.6}
 fit <- snaive(elec, lambda=1/3)
-autoplot(fit) +
-  theme(legend.position="bottom")  
+autoplot(fit)
 ```
 
 ```{r elec9,echo=TRUE,fig.height=4}
-autoplot(fit, include=120) +
-  theme(legend.position="bottom")  
+autoplot(fit, include=120)
 ```
 
 ```{r elec10,echo=TRUE,fig.height=3.6}
 fit <- snaive(elec, lambda=1/3)
-autoplot(fit) +
-  theme(legend.position="bottom") 
+autoplot(fit)
 ```
 
 ## Your turn
@@ -263,14 +266,12 @@ lambda
 ```
 
 ```{r gas2,echo=TRUE,fig.height=4}
-autoplot(fit, include=120) +
-  theme(legend.position="bottom")  
+autoplot(fit, include=120)
 ```
 
 ```{r gas3,echo=TRUE,fig.height=3.6}
 fit <- snaive(gas, lambda=1/3)
-autoplot(fit) +
-  theme(legend.position="bottom")  
+autoplot(fit)
 ```
 
 ## Bias adjustment
@@ -289,6 +290,30 @@ $$
 f(X) = f(\mu) + (X-\mu)f'(\mu) + \frac{1}{2}(X-\mu)^2f''(\mu).$$
 $$Y = f(X) = f(\mu) + \frac12 \sigma^2 f''(\mu)$$
 
+<!-- ## Bias adjustment -->
+
+<!-- **Box-Cox back-transformation:** -->
+<!-- \begin{align*} -->
+<!-- y_t &= \left\{\begin{array}{ll} -->
+<!--         \exp(w_t)      & \quad \lambda = 0; \\ -->
+<!--         (\lambda W_t+1)^{1/\lambda}  & \quad \lambda \ne 0. -->
+<!-- \end{array}\right. \\ -->
+<!-- f(x) &= \begin{cases} -->
+<!--                         e^x & \quad\lambda=0;\\ -->
+<!--  (\lambda x + 1)^{1/\lambda} & \quad\lambda\ne0. -->
+<!--  \end{cases}\\ -->
+<!-- f''(x) &= \begin{cases} -->
+<!--                         e^x & \quad\lambda=0;\\ -->
+<!--  (1-\lambda)(\lambda x + 1)^{1/\lambda-2} & \quad\lambda\ne0. -->
+<!--  \end{cases} -->
+<!-- \end{align*} -->
+<!-- \begin{alertblock}{} -->
+<!-- \centerline{$\E[Y] = \begin{cases} -->
+<!--                         e^\mu\left[1+\frac{\sigma^2}{2}\right] & \quad\lambda=0;\\ -->
+<!--  (\lambda \mu + 1)^{1/\lambda}\left[1+\frac{\sigma^2(1-\lambda)}{2(\lambda\mu+1)^2}\right] & \quad\lambda\ne0. -->
+<!--  \end{cases}$} -->
+<!-- \end{alertblock} -->
+
 ```{r biasadj, fig.height=3}
 fc <- rwf(eggs, drift=TRUE, lambda=0, h=50, level=80)
 fc2 <- rwf(eggs, drift=TRUE, lambda=0, h=50, level=80,
@@ -296,8 +321,7 @@ fc2 <- rwf(eggs, drift=TRUE, lambda=0, h=50, level=80,
 autoplot(eggs) +
   autolayer(fc, series="Simple back transformation") +
   autolayer(fc2, series="Bias adjusted", PI=FALSE) +
-  guides(colour=guide_legend(title="Forecast")) +
-  theme(legend.position="bottom")  
+  guides(colour=guide_legend(title="Forecast"))
 ```
 
 # Residual diagnostics
@@ -309,7 +333,7 @@ autoplot(eggs) +
 - Sometimes drop the subscript: $\hat{y}_t \equiv \hat{y}_{t|t-1}$.
 - Often not true forecasts since parameters are estimated on all data.
 
-For example:
+### For example:
 
 - $\hat{y}_{t} = \bar{y}$ for average method.
 - $\hat{y}_{t} = y_{t-1} + \frac{y_{T}-y_1}{T-1}$ for drift method.
@@ -348,8 +372,7 @@ fits <- fitted(naive(goog200))
 autoplot(goog200, series="Data") +
   autolayer(fits, series="Fitted") +
   xlab("Day") + ylab("Closing Price (US$)") +
-  ggtitle("Google Stock (daily ending 6 December 2013)") +
-  theme(legend.position="bottom")
+  ggtitle("Google Stock (daily ending 6 December 2013)")
 ```
 
 ```{r dj5, echo=TRUE, fig.height=4}
@@ -379,17 +402,18 @@ ggAcf(res) + ggtitle("ACF of residuals")
 
 Consider a \textit{whole set} of $r_{k}$  values, and develop a test to see whether the set is significantly different from a zero set.
 
-### Box-Pierce test
+Box-Pierce test
 
 $Q = T \sum_{k=1}^h r_k^2$
 where $h$  is max lag being considered and $T$ is number of observations.
+
 
 * If each $r_k$ close to zero, $Q$ will be **small**.
 * If some $r_k$ values large (positive or negative), $Q$ will be **large**.
 
 Consider a whole set of $r_{k}$  values, and develop a test to see whether the set is significantly different from a zero set.
 
-### Ljung-Box test
+Ljung-Box test
 
 $Q^* = T(T+2) \sum_{k=1}^h (T-k)^{-1}r_k^2$
 where $h$  is max lag being considered and $T$ is number of observations.
@@ -398,17 +422,14 @@ where $h$  is max lag being considered and $T$ is number of observations.
 * My preferences: $h=10$ for non-seasonal data, $h=2m$ for seasonal data.
 * Better performance, especially in small samples.
 
-If data are WN, $Q^*$ has $\chi^2$ distribution with  $(h - K)$ degrees of freedom where $K=$ no.\ parameters in model. When applied to raw data, set $K=0$.
-
-For the Google example:
+* If data are WN, $Q^*$ has $\chi^2$ distribution with  $(h - K)$ degrees of freedom where $K=$ no.\ parameters in model.
+* When applied to raw data, set $K=0$.
+* For the Google example:
 
 ```{r dj9, echo=TRUE}
 # lag=h and fitdf=K
-Box.test(res, lag=10, fitdf=0)
 Box.test(res, lag=10, fitdf=0, type="Lj")
 ```
-
-For both Q and  $Q^∗$, the results are not significant (i.e., the  p-values are relatively large). Thus, we can conclude that the residuals are not distinguishable from a white noise series.
 
 ## `checkresiduals` function
 
@@ -436,8 +457,10 @@ Compute seasonal naïve forecasts for quarterly Australian beer production from 
 ```{r}
 beer <- window(ausbeer, start=1992)
 fc <- snaive(beer)
-autoplot(fc) +
-  theme(legend.position="bottom")
+```
+
+```{r, fig.height=2.5}
+autoplot(fc)
 ```
 
 Test if the residuals are white noise.
@@ -474,7 +497,9 @@ text(21,1,"Test data",col="red")
 ## Forecast errors
 
 Forecast `error`: the difference between an observed value and its forecast.
-$$e_{T+h} = y_{T+h} - \hat{y}_{T+h|T},$$
+$$
+e_{T+h} = y_{T+h} - \hat{y}_{T+h|T},
+$$
 where the training data is given by $\{y_1,\dots,y_T\}$
 
 - Unlike residuals, forecast errors on the test set involve multi-step forecasts.
@@ -482,7 +507,7 @@ where the training data is given by $\{y_1,\dots,y_T\}$
 
 ## Measures of forecast accuracy
 
-```{r beeraccuracy, echo=FALSE}
+```{r beeraccuracy, echo=FALSE, fig.height=4}
 beer2 <- window(ausbeer,start=1992,end=c(2007,4))
 beerfit1 <- meanf(beer2,h=10)
 beerfit2 <- rwf(beer2,h=10)
@@ -495,8 +520,7 @@ autoplot(tmp) + xlab("Year") + ylab("Megalitres") +
   ggtitle("Forecasts for quarterly beer production") +
   scale_color_manual(values=c('#000000','#1b9e77','#d95f02','#7570b3'),
                      breaks=c("Mean","Naive","SeasonalNaive"),
-                     name="Forecast Method") +
-  theme(legend.position="bottom")  
+                     name="Forecast Method")
 ```
 
 \begin{tabular}{rl}
@@ -533,13 +557,12 @@ For seasonal time series,
 $$Q = (T-m)^{-1}\sum_{t=m+1}^T |y_t-y_{t-m}|$$
 works well. Then MASE is equivalent to MAE relative to a seasonal naïve method.
 
-```{r beeraccuracyagain, echo=FALSE}
+```{r beeraccuracyagain, echo=FALSE, fig.height=4}
 autoplot(tmp) + xlab("Year") + ylab("Megalitres") +
   ggtitle("Forecasts for quarterly beer production") +
   scale_color_manual(values=c('#000000','#1b9e77','#d95f02','#7570b3'),
                      breaks=c("Mean","Naive","SeasonalNaive"),
-                     name="Forecast Method") +
-  theme(legend.position="bottom")  
+                     name="Forecast Method")
 ```
 
 ```{r}
@@ -606,7 +629,7 @@ text(21,1,"Test data",col="red")
 
 **Time series cross-validation**
 
-```{r cv1, cache=TRUE, echo=FALSE}
+```{r cv1, cache=TRUE, echo=FALSE, fig.height=4}
 par(mar=c(0,0,0,0))
 plot(0,0,xlim=c(0,28),ylim=c(0,1),
      xaxt="n",yaxt="n",bty="n",xlab="",ylab="",type="n")
@@ -635,7 +658,8 @@ text(28,.95,"time")
 ```{r tscv, cache=TRUE}
 e <- tsCV(goog200, rwf, drift=TRUE, h=1)
 sqrt(mean(e^2, na.rm=TRUE))
-sqrt(mean(residuals(rwf(goog200, drift=TRUE))^2, na.rm=TRUE))
+sqrt(mean(residuals(rwf(goog200, drift=TRUE))^2,
+          na.rm=TRUE))
 ```
 
 A good way to choose the best forecasting model is to find the model with the smallest RMSE computed using time series cross-validation.
@@ -662,6 +686,8 @@ res^2 %>% mean(na.rm=TRUE) %>% sqrt
 ```
 
 # Prediction intervals
+
+## Prediction intervals
 
 * A forecast $\hat{y}_{T+h|T}$ is (usually) the mean of the conditional distribution $y_{T+h} \mid y_1, \dots, y_{T}$.
 * A prediction interval gives a region within which we expect $y_{T+h}$ to lie with a specified probability.
@@ -714,7 +740,7 @@ For the following series, find an appropriate Box-Cox transformation in order to
 
 * usnetelec
 
-```{r usnetelec, echo=FALSE}
+```{r usnetelec, echo=FALSE, fig.height=4.6}
 autoplot(usnetelec) +
   xlab("Year") + ylab("") +
   ggtitle("Annual US net electricity generation")
@@ -746,7 +772,7 @@ autoplot(BoxCox(usnetelec,lambda))
 
 * usgdp
 
-```{r usgdp, echo=FALSE}
+```{r usgdp, echo=FALSE, fig.height=4.6}
 autoplot(usgdp) +
   xlab("Year") + ylab("") +
   ggtitle("Quarterly US GDP")
@@ -778,7 +804,7 @@ autoplot(BoxCox(usgdp,lambda))
 
 * mcopper
 
-```{r mcopper, echo=FALSE}
+```{r mcopper, echo=FALSE, fig.height=4.6}
 autoplot(mcopper) +
   xlab("Year") + ylab("") +
   ggtitle("Monthly copper prices")
@@ -810,7 +836,7 @@ autoplot(BoxCox(mcopper,lambda))
 
 * enplanements
 
-```{r enplanements, echo=FALSE}
+```{r enplanements, echo=FALSE, fig.height=4.6}
 autoplot(enplanements) +
   xlab("Year") + ylab("") +
   ggtitle("Monthly US domestic enplanements")
@@ -844,7 +870,7 @@ autoplot(BoxCox(enplanements,lambda))
 
 Why is a Box-Cox transformation unhelpful for the cangas data?
 
-```{r cangas , echo=FALSE}
+```{r cangas , echo=FALSE, fig.height=4.6}
 autoplot(cangas) +
   xlab("Year") + ylab("") +
   ggtitle("Monthly Canadian gas production")
@@ -868,14 +894,14 @@ autoplot(myts)
 lambda <- BoxCox.lambda(myts)
 print(c("Selected lambda:", lambda))
 
-fc_retail <- rwf(myts,
-                 drift = TRUE,
+fc_retail <- rwf(myts, 
+                 drift = TRUE, 
                  lambda = lambda,
                  h = 50,
                  level = 80)
 
-fc_retail_biasadj <- rwf(myts,
-                         drift = TRUE,
+fc_retail_biasadj <- rwf(myts, 
+                         drift = TRUE, 
                          lambda = lambda,
                          h = 50,
                          level = 80,
@@ -884,8 +910,7 @@ fc_retail_biasadj <- rwf(myts,
 autoplot(myts) +
   autolayer(fc_retail, series = "Drift method with Box-Cox Transformation") +
   autolayer(fc_retail_biasadj$mean, series = "Bias Adjusted") +
-  guides(colour = guide_legend(title = "Forecast")) +
-  theme(legend.position="bottom")
+  guides(colour = guide_legend(title = "Forecast"))
 
 autoplot(BoxCox(myts,lambda))
 ```
@@ -924,8 +949,7 @@ Calculate the residuals from a seasonal naïve forecast applied to the quarterly
 ```{r}
 beer <- window(ausbeer, start=1992)
 fc <- snaive(beer)
-autoplot(fc) +
-  theme(legend.position="bottom")  
+autoplot(fc)
 res <- residuals(fc)
 autoplot(res)
 ```
@@ -951,16 +975,14 @@ TODO: check for random walk
 
 ```{r}
 fc <- naive(WWWusage)
-autoplot(fc) +
-  theme(legend.position="bottom")  
+autoplot(fc)
 res <- residuals(fc)
-autoplot(res) 
+autoplot(res)
 checkresiduals(fc)
 accuracy(fc)
 
 fc <- snaive(WWWusage)
-autoplot(fc) +
-  theme(legend.position="bottom")  
+autoplot(fc)
 res <- residuals(fc)
 autoplot(res)
 checkresiduals(fc)
